tests/paczka1/fuzzy1/17154777.err
Error in line 1: fnx A603 14,8
Error in line 2: kP4jYQ A630 3,9
Error in line 16: S997 S997 10,2
Error in line 15: 9qe S997 59,7
Error in line 4: fnx S997 8,0
Error in line 25: S997 S769 9,2
